# stratos-demo

./: .gitignore  README.md  pyproject.toml
src/stratos_demo/: __init__.py
src/stratos_demo/aws/vpc/: Pulumi.yaml  __main__.py  example.env
