[project]
name = "stratos-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matt White", email = "mail@matt-w.net" }
]
dependencies = [
    "stratos-lib==0.1.1rc3",
    "pulumi>=3.97.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.0",
    "flake8>=5.0.4",
    "pyright>=1.1.341",
    "ruff>=0.1.8",
    "isort>=5.13.2",
    "bandit>=1.7.6",
    "pytest>=7.4.3",
    "pylint>=3.0.3",
    "ipdb>=0.13.13",
    "pyproject-flake8>=5.0.4.post1",
    "pip>=23.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true
